Introduce PushService interface with JdkHttpClientPushService implementation
Also removes the mutability of AbstractPushService and subclasses which now utilize a builder instead