@@ -1,14 +1,14 @@
 package nl.martijndwars.webpush;
 
-import org.bouncycastle.jce.interfaces.ECPublicKey;
-
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.security.NoSuchAlgorithmException;
 import java.security.NoSuchProviderException;
 import java.security.PublicKey;
 import java.security.spec.InvalidKeySpecException;
 import java.util.Base64;
+
+import org.bouncycastle.jce.interfaces.ECPublicKey;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 
@@ -21,50 +21,39 @@ import static java.nio.charset.StandardCharsets.UTF_8;
  * @param topic Push Message Topic <a href="https://tools.ietf.org/html/rfc8030#section-5.4">Replacing Push Messages</a>
  * @param ttl Time in seconds that the push message is retained by the push service
  */
-public record Notification(String endpoint, ECPublicKey userPublicKey, byte[] userAuth, byte[] payload, Urgency urgency, String topic, int ttl) {
+public record Notification(URI endpoint, ECPublicKey userPublicKey, byte[] userAuth, byte[] payload, Urgency urgency,
+                           String topic, int ttl) {
 
-    private static final int ONE_DAY_DURATION_IN_SECONDS = 86400;
+    private static final int ONE_DAY_DURATION_IN_SECONDS = 86_400;
+
     private static final int DEFAULT_TTL = 28 * ONE_DAY_DURATION_IN_SECONDS;
 
     public boolean hasPayload() {
-        return payload().length > 0;
+        return (payload().length > 0);
     }
 
     public boolean hasUrgency() {
-        return urgency != null;
+        return (urgency != null);
     }
 
     public boolean hasTopic() {
-        return topic != null;
+        return (topic != null);
     }
 
     /**
      * Detect if the notification is for a GCM-based subscription
      */
     public boolean isGcm() {
-        return endpoint().indexOf("https://android.googleapis.com/gcm/send") == 0;
+        return endpoint().toString().startsWith("https://android.googleapis.com/gcm/send");
     }
 
     public boolean isFcm() {
-        return endpoint().indexOf("https://fcm.googleapis.com/fcm/send") == 0;
+        return endpoint().toString().startsWith("https://fcm.googleapis.com/fcm/send");
     }
 
-    public int getTTL() {
-        return ttl;
-    }
-
-    public Urgency getUrgency() {
-        return urgency;
-    }
-
-    public String getTopic() {
-        return topic;
-    }
-
-    public String getOrigin() throws MalformedURLException {
-        URL url = new URL(endpoint());
-
-        return url.getProtocol() + "://" + url.getHost();
+    public String getOrigin() throws URISyntaxException {
+        final var origin = new URI(endpoint().getScheme(), endpoint().getHost(), null, null);
+        return origin.toString();
     }
 
     public static Builder builder() {
@@ -98,76 +87,90 @@ public record Notification(String endpoint, ECPublicKey userPublicKey, byte[] us
     public static final class Builder {
 
         private String endpoint = null;
+
         private ECPublicKey userPublicKey = null;
+
         private byte[] userAuth = null;
+
         private byte[] payload = null;
+
         private int ttl = DEFAULT_TTL;
+
         private Urgency urgency = null;
+
         private String topic = null;
 
         private Builder() {
         }
 
         public Notification build() {
-            return new Notification(endpoint, userPublicKey, userAuth, payload, urgency, topic, ttl);
+            return new Notification(URI.create(endpoint), userPublicKey, userAuth, payload, urgency, topic, ttl);
         }
 
-        public Builder endpoint(String endpoint) {
+        public Builder endpoint(final String endpoint) {
             this.endpoint = endpoint;
             return this;
         }
 
-        public Builder userPublicKey(PublicKey publicKey) {
+        public Builder endpoint(final URI endpoint) {
+            this.endpoint = endpoint.toString();
+            return this;
+        }
+
+        public Builder userPublicKey(final PublicKey publicKey) {
             this.userPublicKey = (ECPublicKey) publicKey;
             return this;
         }
 
-        public Builder userPublicKey(String publicKey) throws NoSuchAlgorithmException, NoSuchProviderException, InvalidKeySpecException {
+        public Builder userPublicKey(final String publicKey)
+                throws NoSuchAlgorithmException, NoSuchProviderException, InvalidKeySpecException {
             this.userPublicKey = (ECPublicKey) Utils.loadPublicKey(publicKey);
             return this;
         }
 
-        public Builder userPublicKey(byte[] publicKey) throws NoSuchAlgorithmException, NoSuchProviderException, InvalidKeySpecException {
+        public Builder userPublicKey(final byte[] publicKey)
+                throws NoSuchAlgorithmException, NoSuchProviderException, InvalidKeySpecException {
             this.userPublicKey = (ECPublicKey) Utils.loadPublicKey(publicKey);
             return this;
         }
 
-        public Builder userAuth(String userAuth) {
+        public Builder userAuth(final String userAuth) {
             this.userAuth = Base64.getUrlDecoder().decode(userAuth);
             return this;
         }
 
-        public Builder userAuth(byte[] userAuth) {
+        public Builder userAuth(final byte[] userAuth) {
             this.userAuth = userAuth;
             return this;
         }
 
-        public Builder payload(byte[] payload) {
+        public Builder payload(final byte[] payload) {
             this.payload = payload;
             return this;
         }
 
-        public Builder payload(String payload) {
+        public Builder payload(final String payload) {
             this.payload = payload.getBytes(UTF_8);
             return this;
         }
 
-        public Builder ttl(int ttl) {
+        public Builder ttl(final int ttl) {
             this.ttl = ttl;
             return this;
         }
 
-        public Builder urgency(Urgency urgency) {
+        public Builder urgency(final Urgency urgency) {
             this.urgency = urgency;
             return this;
         }
 
-        public Builder topic(String topic) {
+        public Builder topic(final String topic) {
             this.topic = topic;
             return this;
         }
 
-        public Builder subscription(Subscription subscription) throws NoSuchAlgorithmException, InvalidKeySpecException, NoSuchProviderException {
+        public Builder subscription(final Subscription subscription)
+                throws NoSuchAlgorithmException, InvalidKeySpecException, NoSuchProviderException {
             return endpoint(subscription.endpoint())
                 .userPublicKey(subscription.keys().p256dh())
                 .userAuth(subscription.keys().auth());
